--- a/lpsbackend/package.json
+++ b/lpsbackend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lpsbackend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -10,13 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "http": "^0.0.1-security",
-    "mongoose": "^8.17.1",
+    "mongoose": "^8.15.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
